<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.rodesta2212.pertemuan12.MainActivity">
    <TextView
        android:id="@+id/textLokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="Lokasi"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textLokasi"
        android:layout_alignParentRight="true"
        android:hint="Inputkan Lokasi"
        android:ems="10" />
    <requestFocus />
    <TextView
        android:id="@+id/textNegara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLokasi"
        android:layout_below="@+id/textLokasi"
        android:layout_marginTop="68dp"
        android:text="@string/country"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/textSuhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNegara"
        android:layout_marginTop="19dp"
        android:text="@string/temperature"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/textLembab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textSuhu"
        android:layout_below="@+id/textSuhu"
        android:layout_marginTop="32dp"
        android:text="@string/humidity"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/textTekanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLembab"
        android:layout_below="@+id/textLembab"
        android:layout_marginTop="21dp"
        android:text="@string/pressure"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <EditText
        android:id="@+id/suhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textSuhu"
        android:layout_alignBottom="@+id/textSuhu"
        android:layout_alignLeft="@+id/negara"
        android:ems="10" />
    <EditText
        android:id="@+id/kelembapan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textTekanan"
        android:layout_alignLeft="@+id/lokasi"
        android:ems="10" />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/negara"
        android:layout_below="@+id/lokasi"
        android:onClick="open"
        android:text="@string/weather"/>
    <ImageView
        android:id="@+id/gambarCuaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="false"
        android:src="@drawable/clear"
        android:layout_below="@+id/textTekanan"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/negara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textNegara"
        android:layout_alignBottom="@+id/textNegara"
        android:layout_alignLeft="@+id/kelembapan"
        android:ems="10" />
    <EditText
        android:id="@+id/tekanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textTekanan"
        android:layout_alignBottom="@+id/textTekanan"
        android:layout_alignLeft="@+id/kelembapan"
        android:ems="10" />
    <TextView
        android:id="@+id/Jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:text="01/01/2017 00:00:00 AM" />
</RelativeLayout>